syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true; // For julia client
option java_package = "io.lambdarpc.transport.grpc";
package io.lambdarpc.transport.grpc;

import "Entity.proto";

message ExecuteRequest {
  string accessName = 1;
  string executionId = 2;
  repeated Entity args = 3;
}
